--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Quicksand;
+  src: url("fonts/Quicksand/Quicksand-VariableFont_wght.ttf");
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
