--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -2,6 +2,10 @@
   font-family: Quicksand;
   src: url("fonts/Quicksand/Quicksand-VariableFont_wght.ttf");
 }
+@font-face {
+  font-family: QuicksandBold;
+  src: url("fonts/Quicksand/Quicksand_Bold.otf");
+}
 
 @tailwind base;
 @tailwind components;
